--- a/.eslintrc
+++ b/.eslintrc
@@ -11,7 +11,7 @@
 ],
   "plugins": ["@typescript-eslint"],
   "rules": {
-    // not needed for vue 3
-    "vue/no-multiple-template-root": "off"
+    "vue/no-multiple-template-root": "off",
+    "vue/multi-word-component-names": "off"
   }
 }
