--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "typescript": "^5.2.2",
     "vite": "^5.0.0",
     "vue-eslint-parser": "^9.3.2",
+    "vue-router": "^4.2.5",
     "vue-tsc": "^1.8.22"
   }
 }
