--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.3.8"
+    "apexcharts": "^3.44.2",
+    "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2",
+    "vue": "^3.3.8",
+    "vue3-apexcharts": "^1.4.4"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.13.2",
