--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,13 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "skipLibCheck": true,
     "allowJs": true,
+    /*"baseUrl": "./",
+    "paths": {
+      "src*//*": [
+        "./src*//*"
+      ]
+    },*/
+    
 
     /* Bundler mode */
     "moduleResolution": "bundler",
