--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,7 @@
   "plugins": ["@typescript-eslint"],
   "rules": {
     "vue/no-multiple-template-root": "off",
-    "vue/multi-word-component-names": "off"
+    "vue/multi-word-component-names": "off",
+    "@typescript-eslint/no-explicit-any": "off"
   }
 }
