--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
     "vue": "^3.3.8",
+    "vue-easy-spinner": "^0.1.0",
+    "vue-toast-notification": "^3",
     "vue3-apexcharts": "^1.4.4"
   },
   "devDependencies": {
